# tuix-core

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
examples/: README.md  builders.py  ex_canvas.py  ex_choice.py  ex_multi_widget.py  ex_progressbar.py
examples/multimodal/: focus_routing.py
examples/showcase/: buffer_hierarchy_demo.py  layout_demo.py  scene_stats_demo.py  sequential_journey.py
examples/widgets/: button_and_badge_demo.py  canvas_bounce.py  choice_palette.py  menu_and_tags_demo.py  progressbar_dual.py  scroll_container_demo.py  text_and_box_demo.py  viewport_modal_demo.py
src/tuix/core/: _lib.py  _structs.py  _tuix_cy.c  _tuix_cy.pyx  batch_executor.c  batch_executor.h  buffer_manager.c  buffer_manager.h  buffers.c  buffers.h  buffers.py  builders.py  cache_manager.c  cache_manager.h  cache_manager_stub.c  engine.py  event_shim.c  init.c  init.h  input.py  main.c  main.h  object_manager.c  object_manager.h  objects.py  py_shim.c  registry.py  rendering.c  rendering.h  rendering_halfblocks.c  scenes.py  tuix_registry.h  types.h  viewport.h
src/tuix/core/compositor/: compositor.c  compositor.h  geometry_resolver.c  geometry_resolver.h  merge_utils.c  merge_utils.h
src/tuix/core/content_builder/: builder_utils.c  builder_utils.h  builders_registrant.c  builders_registrant.h  builders_router.c  builders_router.h
src/tuix/core/content_builder/builders/: badge_builder.c  badge_builder.h  box_builder.c  box_builder.h  button_builder.c  button_builder.h  canvas_builder.c  canvas_builder.h  checkbox_builder.c  checkbox_builder.h  choice_builder.c  choice_builder.h  dialog_builder.c  dialog_builder.h  divider_builder.c  divider_builder.h  grid_builder.c  grid_builder.h  (+24 more)
src/tuix/core/input/: input.c  input.h
src/tuix/core/subcycles/: subcycle_registrant.c  subcycle_registrant.h  subcycles_manager.c  subcycles_manager.h
tests/: test_core.py  test_multimodal_and_examples.py
tests/benchmarks/: benchmark.json  benchmark_frames.csv  benchmark_summary.csv  full_benchmark.py  micro_scene_bench.py
