[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "tuix"
version = "0.2.0"
description = "A lightweight and modular terminal UI engine. Designed to make building interactive terminal interfaces simple and structured."
requires-python = ">=3.10"
license = {text = "MIT"}
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/custosh/tuix-core"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
build = "cp38-*"

[tool.cibuildwheel.linux]
archs = ["x86_64", "i686", "aarch64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]