[metadata]
name = tuix-core
version = 0.2.0
author = custosh
author_email = custosh.x@gmail.com
description = A lightweight and modular terminal UI engine. Designed to make building interactive terminal interfaces simple and structured.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src